# pytorch_dlprim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-for-debug.sh  build-for-release.sh  requirements.txt  setup.py
debian/: build-for-deb.sh
debian/torch_kpu/DEBIAN/: control  postinst  preinst  prerm
debian/usr/local/lib/torch_kpu/: README.md
examples/cplus/: CMakeLists.txt  README.md
examples/cplus/infer_mobilenet/: CMakeLists.txt  download_model.py  infer_mobilenet.cpp  run.sh  run_example.sh  run_model.py
examples/cplus/infer_nanogpt/: cxxopts.h  dataloader.cpp  dataloader.h  download_data.py  infer_nanogpt.cpp  model.cpp  model.h
examples/cplus/infer_qwen2/: infer_qwen2.cpp
examples/cplus/move_tensor/: move_tensor.cpp
examples/data/: README.md
examples/python/: infer_qwen2.py  move_tensor.py  train_mnist.py
include/: CLTensor.h  utils.h
python/pytorch_ocl/: __init__.py
src/: CLTensor.cpp  CLTensor.h  guard.cpp  pybind.cpp  registeration.cpp  utils.cpp
tests/: README.md
tools/: amd_gpu_status.sh  check_code_style.sh  convert_safetensor_to_pt.py  convert_safetensor_to_regular_pt.py  intel_gpu_status.sh  opencl.hpp
torch_kpu/csrc/: Pybind.cpp  pybind.cpp
torch_kpu/csrc/core/: Allocator.cpp  CLTensor.cpp  CMakeLists.txt  Guard.cpp  GuardImpl.cpp  HooksInterface.cpp  Utils.cpp  registeration.cpp
torch_kpu/csrc/include/: Allocator.h  CLTensor.h  Guard.h  GuardImpl.h  HooksInterface.h  ProfilerInterface.h  Utils.h
torch_kpu/csrc/profiler/: CMakeLists.txt  ProfilerInterface.cpp
torch_kpu/python/: __init__.py
torch_kpu/python/core/: utils.py
torch_kpu/python/testing/: common_utils.py  testcase.py
torch_kpu/python/utils/: common_utils.py  path_manager.py
